--- a/addons/controls/package.json
+++ b/addons/controls/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-controls",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Controls for component properties",
   "keywords": [
     "addon",
@@ -30,11 +30,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/api": "6.0.0-beta.31",
-    "@storybook/client-api": "6.0.0-beta.31",
-    "@storybook/components": "6.0.0-beta.31",
-    "@storybook/theming": "6.0.0-beta.31",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/api": "6.1.0-alpha.35",
+    "@storybook/client-api": "6.1.0-alpha.35",
+    "@storybook/components": "6.1.0-alpha.35",
+    "@storybook/theming": "6.1.0-alpha.35",
     "core-js": "^3.6.5"
   },
   "peerDependencies": {
