--- a/addons/cssresources/package.json
+++ b/addons/cssresources/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-cssresources",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "A storybook addon to switch between css resources at runtime for your story",
   "keywords": [
     "addon",
@@ -32,11 +32,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/api": "6.0.0-beta.31",
-    "@storybook/components": "6.0.0-beta.31",
-    "@storybook/core-events": "6.0.0-beta.31",
-    "@storybook/theming": "6.0.0-beta.31",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/api": "6.1.0-alpha.35",
+    "@storybook/components": "6.1.0-alpha.35",
+    "@storybook/core-events": "6.1.0-alpha.35",
+    "@storybook/theming": "6.1.0-alpha.35",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
     "react": "^16.8.3",
