--- a/addons/design-assets/package.json
+++ b/addons/design-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-design-assets",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Design asset preview for storybook",
   "keywords": [
     "addon",
@@ -34,12 +34,12 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/api": "6.0.0-beta.31",
-    "@storybook/client-logger": "6.0.0-beta.31",
-    "@storybook/components": "6.0.0-beta.31",
-    "@storybook/core-events": "6.0.0-beta.31",
-    "@storybook/theming": "6.0.0-beta.31",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/api": "6.1.0-alpha.35",
+    "@storybook/client-logger": "6.1.0-alpha.35",
+    "@storybook/components": "6.1.0-alpha.35",
+    "@storybook/core-events": "6.1.0-alpha.35",
+    "@storybook/theming": "6.1.0-alpha.35",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
     "react": "^16.8.3",
