--- a/addons/essentials/package.json
+++ b/addons/essentials/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-essentials",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Curated addons to bring out the best of Storybook",
   "keywords": [
     "addon",
@@ -28,13 +28,13 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addon-actions": "6.0.0-beta.31",
-    "@storybook/addon-backgrounds": "6.0.0-beta.31",
-    "@storybook/addon-docs": "6.0.0-beta.31",
-    "@storybook/addon-viewport": "6.0.0-beta.31",
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/api": "6.0.0-beta.31",
-    "@storybook/node-logger": "6.0.0-beta.31",
+    "@storybook/addon-actions": "6.1.0-alpha.35",
+    "@storybook/addon-backgrounds": "6.1.0-alpha.35",
+    "@storybook/addon-docs": "6.1.0-alpha.35",
+    "@storybook/addon-viewport": "6.1.0-alpha.35",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/api": "6.1.0-alpha.35",
+    "@storybook/node-logger": "6.1.0-alpha.35",
     "core-js": "^3.6.5",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^1.1.1"
