--- a/addons/graphql/package.json
+++ b/addons/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addon-graphql",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Storybook addon to display the GraphiQL IDE",
   "keywords": [
     "addon",
@@ -31,8 +31,8 @@
   "dependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-classes": "^7.12.1",
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/api": "6.0.0-beta.31",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/api": "6.1.0-alpha.35",
     "@types/webpack-env": "^1.15.3",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
