--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/angular",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Storybook for Angular: Develop Angular Components in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
@@ -34,9 +34,9 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/core": "6.0.0-beta.31",
-    "@storybook/node-logger": "6.0.0-beta.31",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/core": "6.1.0-alpha.35",
+    "@storybook/node-logger": "6.1.0-alpha.35",
     "@types/webpack-env": "^1.15.2",
     "autoprefixer": "^9.7.6",
     "core-js": "^3.0.1",
