--- a/app/ember/package.json
+++ b/app/ember/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/ember",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Storybook for Ember: Develop Ember Component in isolation with Hot Reloading.",
   "homepage": "https://github.com/storybookjs/storybook/tree/master/app/ember",
   "bugs": {
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@ember/test-helpers": "^1.7.0",
-    "@storybook/core": "6.0.0-beta.31",
+    "@storybook/core": "6.1.0-alpha.35",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
     "regenerator-runtime": "^0.13.7",
