--- a/app/marionette/package.json
+++ b/app/marionette/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/marionette",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Storybook for Marionette: Develop Marionette.js component in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
@@ -25,7 +25,7 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/core": "6.0.0-beta.31",
+    "@storybook/core": "6.1.0-alpha.35",
     "common-tags": "^1.8.0",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
