--- a/app/react/package.json
+++ b/app/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/react",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Storybook for React: Develop React Component in isolation with Hot Reloading.",
   "keywords": [
     "storybook"
@@ -36,9 +36,9 @@
   "dependencies": {
     "@babel/preset-flow": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/core": "6.0.0-beta.31",
-    "@storybook/node-logger": "6.0.0-beta.31",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/core": "6.1.0-alpha.35",
+    "@storybook/node-logger": "6.1.0-alpha.35",
     "@storybook/semver": "^7.3.2",
     "@svgr/webpack": "^5.4.0",
     "@types/webpack-env": "^1.15.3",
@@ -56,7 +56,7 @@
     "webpack": "5.3.2"
   },
   "devDependencies": {
-    "@storybook/client-api": "6.0.0-beta.31",
+    "@storybook/client-api": "6.1.0-alpha.35",
     "@types/node": "^14.0.10"
   },
   "peerDependencies": {
