--- a/app/web-components/package.json
+++ b/app/web-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/web-components",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Storybook for web-components: View web components snippets in isolation with Hot Reloading.",
   "keywords": [
     "lit-html",
@@ -38,8 +38,8 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/core": "6.0.0-beta.31",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/core": "6.1.0-alpha.35",
     "@types/webpack-env": "^1.15.3",
     "babel-plugin-bundled-import-meta": "^0.3.2",
     "core-js": "^3.6.5",
