--- a/examples/official-storybook/package.json
+++ b/examples/official-storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "official-storybook",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "private": true,
   "scripts": {
     "build-storybook": "cross-env STORYBOOK_DISPLAY_WARNING=true DISPLAY_WARNING=true build-storybook -c ./",
@@ -14,32 +14,32 @@
   },
   "devDependencies": {
     "@packtracker/webpack-plugin": "^2.0.1",
-    "@storybook/addon-a11y": "6.0.0-beta.31",
-    "@storybook/addon-actions": "6.0.0-beta.31",
-    "@storybook/addon-backgrounds": "6.0.0-beta.31",
-    "@storybook/addon-controls": "6.0.0-beta.31",
-    "@storybook/addon-cssresources": "6.0.0-beta.31",
-    "@storybook/addon-design-assets": "6.0.0-beta.31",
-    "@storybook/addon-docs": "6.0.0-beta.31",
-    "@storybook/addon-events": "6.0.0-beta.31",
-    "@storybook/addon-graphql": "6.0.0-beta.31",
-    "@storybook/addon-jest": "6.0.0-beta.31",
-    "@storybook/addon-knobs": "6.0.0-beta.31",
-    "@storybook/addon-links": "6.0.0-beta.31",
-    "@storybook/addon-queryparams": "6.0.0-beta.31",
-    "@storybook/addon-storyshots": "6.0.0-beta.31",
-    "@storybook/addon-storyshots-puppeteer": "6.0.0-beta.31",
-    "@storybook/addon-storysource": "6.0.0-beta.31",
-    "@storybook/addon-toolbars": "6.0.0-beta.31",
-    "@storybook/addon-viewport": "6.0.0-beta.31",
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/cli": "6.0.0-beta.31",
-    "@storybook/components": "6.0.0-beta.31",
-    "@storybook/core-events": "6.0.0-beta.31",
-    "@storybook/node-logger": "6.0.0-beta.31",
-    "@storybook/react": "6.0.0-beta.31",
-    "@storybook/source-loader": "6.0.0-beta.31",
-    "@storybook/theming": "6.0.0-beta.31",
+    "@storybook/addon-a11y": "6.1.0-alpha.35",
+    "@storybook/addon-actions": "6.1.0-alpha.35",
+    "@storybook/addon-backgrounds": "6.1.0-alpha.35",
+    "@storybook/addon-controls": "6.1.0-alpha.35",
+    "@storybook/addon-cssresources": "6.1.0-alpha.35",
+    "@storybook/addon-design-assets": "6.1.0-alpha.35",
+    "@storybook/addon-docs": "6.1.0-alpha.35",
+    "@storybook/addon-events": "6.1.0-alpha.35",
+    "@storybook/addon-graphql": "6.1.0-alpha.35",
+    "@storybook/addon-jest": "6.1.0-alpha.35",
+    "@storybook/addon-knobs": "6.1.0-alpha.35",
+    "@storybook/addon-links": "6.1.0-alpha.35",
+    "@storybook/addon-queryparams": "6.1.0-alpha.35",
+    "@storybook/addon-storyshots": "6.1.0-alpha.35",
+    "@storybook/addon-storyshots-puppeteer": "6.1.0-alpha.35",
+    "@storybook/addon-storysource": "6.1.0-alpha.35",
+    "@storybook/addon-toolbars": "6.1.0-alpha.35",
+    "@storybook/addon-viewport": "6.1.0-alpha.35",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/cli": "6.1.0-alpha.35",
+    "@storybook/components": "6.1.0-alpha.35",
+    "@storybook/core-events": "6.1.0-alpha.35",
+    "@storybook/node-logger": "6.1.0-alpha.35",
+    "@storybook/react": "6.1.0-alpha.35",
+    "@storybook/source-loader": "6.1.0-alpha.35",
+    "@storybook/theming": "6.1.0-alpha.35",
     "chromatic": "^4.0.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
