--- a/lib/addons/package.json
+++ b/lib/addons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/addons",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Storybook addons store",
   "keywords": [
     "storybook"
@@ -28,12 +28,12 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/api": "6.0.0-beta.31",
-    "@storybook/channels": "6.0.0-beta.31",
-    "@storybook/client-logger": "6.0.0-beta.31",
-    "@storybook/core-events": "6.0.0-beta.31",
-    "@storybook/router": "6.0.0-beta.31",
-    "@storybook/theming": "6.0.0-beta.31",
+    "@storybook/api": "6.1.0-alpha.35",
+    "@storybook/channels": "6.1.0-alpha.35",
+    "@storybook/client-logger": "6.1.0-alpha.35",
+    "@storybook/core-events": "6.1.0-alpha.35",
+    "@storybook/router": "6.1.0-alpha.35",
+    "@storybook/theming": "6.1.0-alpha.35",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
     "regenerator-runtime": "^0.13.7"
