--- a/lib/channel-postmessage/package.json
+++ b/lib/channel-postmessage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/channel-postmessage",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "",
   "keywords": [
     "storybook"
@@ -29,8 +29,8 @@
   },
   "dependencies": {
     "@storybook/channels": "6.0.28",
-    "@storybook/client-logger": "6.0.0-beta.31",
-    "@storybook/core-events": "6.0.0-beta.31",
+    "@storybook/client-logger": "6.1.0-alpha.35",
+    "@storybook/core-events": "6.1.0-alpha.35",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
     "telejson": "^4.0.0"
