--- a/lib/channel-websocket/package.json
+++ b/lib/channel-websocket/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/channel-websocket",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "",
   "keywords": [
     "storybook"
@@ -28,7 +28,7 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/channels": "6.0.0-beta.31",
+    "@storybook/channels": "6.1.0-alpha.35",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
     "telejson": "^4.0.0"
