--- a/lib/cli/package.json
+++ b/lib/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/cli",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Storybook's CLI - easiest method of adding storybook to your projects",
   "keywords": [
     "cli",
@@ -41,7 +41,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@storybook/codemod": "6.0.28",
-    "@storybook/node-logger": "6.0.0-beta.31",
+    "@storybook/node-logger": "6.1.0-alpha.35",
     "@storybook/semver": "^7.3.2",
     "chalk": "^4.1.0",
     "commander": "^5.0.0",
@@ -63,30 +63,30 @@
     "update-notifier": "^4.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.0.0-beta.31",
-    "@storybook/addon-graphql": "6.0.0-beta.31",
-    "@storybook/addon-knobs": "6.0.0-beta.31",
-    "@storybook/addon-links": "6.0.0-beta.31",
-    "@storybook/addon-storyshots": "6.0.0-beta.31",
-    "@storybook/addons": "6.0.0-beta.31",
-    "@storybook/angular": "6.0.0-beta.31",
-    "@storybook/channel-postmessage": "6.0.0-beta.31",
-    "@storybook/channel-websocket": "6.0.0-beta.31",
-    "@storybook/channels": "6.0.0-beta.31",
-    "@storybook/ember": "6.0.0-beta.31",
-    "@storybook/html": "6.0.0-beta.31",
-    "@storybook/marionette": "6.0.0-beta.31",
-    "@storybook/marko": "6.0.0-beta.31",
-    "@storybook/mithril": "6.0.0-beta.31",
-    "@storybook/preact": "6.0.0-beta.31",
-    "@storybook/rax": "6.0.0-beta.31",
-    "@storybook/react": "6.0.0-beta.31",
+    "@storybook/addon-actions": "6.1.0-alpha.35",
+    "@storybook/addon-graphql": "6.1.0-alpha.35",
+    "@storybook/addon-knobs": "6.1.0-alpha.35",
+    "@storybook/addon-links": "6.1.0-alpha.35",
+    "@storybook/addon-storyshots": "6.1.0-alpha.35",
+    "@storybook/addons": "6.1.0-alpha.35",
+    "@storybook/angular": "6.1.0-alpha.35",
+    "@storybook/channel-postmessage": "6.1.0-alpha.35",
+    "@storybook/channel-websocket": "6.1.0-alpha.35",
+    "@storybook/channels": "6.1.0-alpha.35",
+    "@storybook/ember": "6.1.0-alpha.35",
+    "@storybook/html": "6.1.0-alpha.35",
+    "@storybook/marionette": "6.1.0-alpha.35",
+    "@storybook/marko": "6.1.0-alpha.35",
+    "@storybook/mithril": "6.1.0-alpha.35",
+    "@storybook/preact": "6.1.0-alpha.35",
+    "@storybook/rax": "6.1.0-alpha.35",
+    "@storybook/react": "6.1.0-alpha.35",
     "@storybook/react-native": "6.0.0-alpha.0",
-    "@storybook/riot": "6.0.0-beta.31",
-    "@storybook/svelte": "6.0.0-beta.31",
-    "@storybook/ui": "6.0.0-beta.31",
-    "@storybook/vue": "6.0.0-beta.31",
-    "@storybook/web-components": "6.0.0-beta.31",
+    "@storybook/riot": "6.1.0-alpha.35",
+    "@storybook/svelte": "6.1.0-alpha.35",
+    "@storybook/ui": "6.1.0-alpha.35",
+    "@storybook/vue": "6.1.0-alpha.35",
+    "@storybook/web-components": "6.1.0-alpha.35",
     "@types/cross-spawn": "^6.0.2",
     "@types/inquirer": "^6.5.0",
     "@types/puppeteer-core": "^2.0.0",
