--- a/lib/client-logger/package.json
+++ b/lib/client-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/client-logger",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "",
   "keywords": [
     "storybook"
