--- a/lib/theming/package.json
+++ b/lib/theming/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/theming",
-  "version": "6.0.0-beta.31",
+  "version": "6.1.0-alpha.35",
   "description": "Core Storybook Components",
   "keywords": [
     "storybook"
@@ -31,7 +31,7 @@
     "@emotion/core": "^10.0.35",
     "@emotion/is-prop-valid": "^0.8.8",
     "@emotion/styled": "^10.0.27",
-    "@storybook/client-logger": "6.0.0-beta.31",
+    "@storybook/client-logger": "6.1.0-alpha.35",
     "core-js": "^3.6.5",
     "deep-object-diff": "^1.1.0",
     "emotion-theming": "^10.0.27",
