--- a/examples/ember-cli/package.json
+++ b/examples/ember-cli/package.json
@@ -16,7 +16,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@ember/optional-features": "^1.3.0",
+    "@ember/optional-features": "^2.0.0",
+    "@glimmer/component": "^1.0.2",
+    "@glimmer/tracking": "^1.0.2",
     "@storybook/addon-a11y": "6.1.0-rc.4",
     "@storybook/addon-actions": "6.1.0-rc.4",
     "@storybook/addon-backgrounds": "6.1.0-rc.4",
@@ -30,21 +32,23 @@
     "@storybook/ember": "6.1.0-rc.4",
     "@storybook/ember-cli-storybook": "^0.2.1",
     "@storybook/source-loader": "6.1.0-rc.4",
+    "@types/ember": "^3.16.2",
     "babel-loader": "^8",
     "broccoli-asset-rev": "^3.0.0",
     "cross-env": "^7.0.0",
     "ember-ajax": "^5.0.0",
-    "ember-cli": "~3.17.0",
+    "ember-cli": "~3.20.2",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.13.2",
-    "ember-cli-htmlbars": "^4.2.2",
+    "ember-cli-babel": "^7.21.0",
+    "ember-cli-htmlbars": "^5.2.0",
     "ember-cli-inject-live-reload": "^2.0.1",
-    "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-typescript": "^4.0.0",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-load-initializers": "^2.0.0",
-    "ember-resolver": "^7.0.0",
-    "ember-source": "~3.19.0",
+    "ember-resolver": "^8.0.0",
+    "ember-source": "~3.20.2",
     "loader.js": "^4.2.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.0"
