--- a/app/ember/package.json
+++ b/app/ember/package.json
@@ -40,6 +40,9 @@
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0"
   },
+  "devDependencies": {
+    "ember-cli-htmlbars": "^5.3.1"
+  },
   "peerDependencies": {
     "@babel/core": "*",
     "babel-plugin-ember-modules-api-polyfill": "^2.12.0",
