--- a/.github/workflows/test-flow.yml
+++ b/.github/workflows/test-flow.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: c-hive/gha-yarn-cache@v1
       - name: install
-        run: echo "bootstrap --core"
+        run: yarn bootstrap --core
       - name: upload root
         uses: actions/upload-artifact@v2
         with:
