--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ executors:
           NODE_OPTIONS: --max_old_space_size=4096
     resource_class: <<parameters.class>>
 
+orbs:
+  git-shallow-clone: guitarrapc/git-shallow-clone@2.0.3
+
 jobs:
   build:
     executor:
@@ -90,7 +93,8 @@ jobs:
       class: medium
       name: sb_node
     steps:
-      - checkout
+      - git-shallow-clone/checkout_advanced:
+          clone_options: '--depth 1 --verbose'
       - run:
           name: Keep only root package
           command: rm -rf examples/ && rm -rf addons/ && rm -rf app/ && rm -rf lib/
