--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -24,8 +24,7 @@
     "ts3.4/**/*"
   ],
   "scripts": {
-    "prepare": "node ./scripts/generateVersion.js && node ../../scripts/prepare.js",
-    "postversion": "node ./scripts/generateVersion.js"
+    "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
     "@reach/router": "^1.3.3",
