--- a/lib/cli/tsconfig.json
+++ b/lib/cli/tsconfig.json
@@ -12,5 +12,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src/**/*"],
-  "exclude": ["src/**/template*", "src/frameworks/**/*"]
+  "exclude": ["src/**/template*", "**/*.test.*", "src/frameworks/**/*"]
 }
