--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -51,7 +51,8 @@
     "@types/lodash": "^4.14.150",
     "@types/semver": "^7.1.0",
     "flush-promises": "^1.0.2",
-    "qs": "^6.6.0"
+    "qs": "^6.6.0",
+    "preval.macro": "^5.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
