--- a/app/vue/package.json
+++ b/app/vue/package.json
@@ -38,6 +38,7 @@
     "ts3.4/**/*"
   ],
   "scripts": {
+    "postinstall": "node ./scripts/switchVueVersion.js && node ../../scripts/prepare.js",
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
@@ -58,17 +59,23 @@
   "devDependencies": {
     "@types/node": "^14.0.10",
     "@types/webpack": "^4.41.24",
-    "vue": "^2.6.8",
-    "vue-loader": "^15.7.0",
-    "vue-template-compiler": "^2.6.8"
+    "@vue/compiler-sfc": "^3.0.0",
+    "chalk": "^2.4.2",
+    "rimraf": "^2.7.1",
+    "vue": "^3.0.0",
+    "vue-loader": "^16.0.0",
+    "vue2": "npm:vue@^2.6.12"
   },
   "peerDependencies": {
     "@babel/core": "*",
     "babel-loader": "^7.0.0 || ^8.0.0",
     "css-loader": "*",
     "ts-loader": "^6.2.2",
-    "vue": "^2.6.8",
-    "vue-loader": "^15.7.0",
+    "vue": "^2.6.8 || >=3.0.0",
+    "vue-loader": "^15.7.0 || ^16.0.0"
+  },
+  "optionalDependencies": {
+    "@vue/compiler-sfc": "^3.0.0",
     "vue-template-compiler": "^2.6.8"
   },
   "engines": {
